GNOME Bugzilla – Bug 633330
gvfs client code on arm platform stops working after first connection to daemon
Last modified: 2010-12-07 19:38:35 UTC
Created attachment 173383 [details] [review] changes signature of async_connection_accept_new_fd to return gboolean After the first connection between a GInputStream and the gvfsd, all subsequent attempts fail. This was seen on ARM hardware only. The reason is, that in gvfsdaemonbus.c the GSourceFunc returns 'void' where a 'gboolean' return value is expected. So if accidentally a zero value is returned, the source function will be removed.
Created attachment 175280 [details] [review] fix return value of async_connection_accept_new_fd() Patch with proper indentation reformatted as git commit.
Raising priority as this bug makes gvfs pretty much unusable on platforms where the value returned on the stack happens to be 0. Please consider to get this into the next 1.6 release.
Review of attachment 175280 [details] [review]: Please commit to the various branches affected.
Committed to master and gnome-2-32.