Fix return value of async_connection_accept_new_fd()

async_connection_accept_new_fd() is a GSource callback and needs
to return TRUE so that it is called again. Add the missing return
value.

Fixes gvfs client code on the ARM platform (and probably other
platforms too).
See https://bugzilla.gnome.org/show_bug.cgi?id=633330 for further
details.

Acked-by: Sven Neumann <sven@gimp.org>
(cherry picked from commit 2b6c559ea87fc929ac43527da5cc61c6d831f357)